Default and Tablet style working.  Need to fix floating footer on tablet css.

--- a/wp-content/themes/astjohn_ca/style-default.css
+++ b/wp-content/themes/astjohn_ca/style-default.css
@@ -12,16 +12,15 @@ html {
 }
 
 body {
-	padding: 24px 48px 0px;
 	background: url(images/layout/default/body.jpg) no-repeat top center;
 	color: rgb(60,60,60);
 	-webkit-text-size-adjust: 100%; /* Stops Mobile Safari from auto-adjusting font-sizes */
+	height: 100%;
 }
 
 #page {
   width: 1080px;
-	min-height: 400px;
-  margin: auto;
+	height: 100%;
 }
 
 /**
@@ -122,7 +121,6 @@ ul#words{
  */
 footer.layout{
   background: url('images/layout/default/footer.jpg') top center no-repeat;
-  width: 100%;
   min-height: 183px;
 }
   div#footer_content_wrap{
@@ -138,7 +136,7 @@ footer.layout div.social_media{
 footer.layout p.copyright{
   color: #FFF;
   position: relative;
-  top: 160px;
+  top: 155px;
   left: -150px;
   font-weight: bold;
 }
