--- a/wp-content/themes/astjohn_ca/style-tablet.css
+++ b/wp-content/themes/astjohn_ca/style-tablet.css
@@ -12,13 +12,11 @@ px      68    160    252    344    436    528    620    712    */
 	  margin: auto;
 		width: 712px;
   	background: url(images/layout/tablet/body.jpg) no-repeat top center;
-		padding: 48px 28px 0px;
 	}
 
 	#page {
     width: 712px;
     margin: auto;
-  	min-height: 400px;
   }
 
   /**
@@ -119,7 +117,6 @@ px      68    160    252    344    436    528    620    712    */
    */
   footer.layout{
     background: url('images/layout/tablet/footer.jpg') top center no-repeat;
-    width: 100%;
     min-height: 107px;
   }
     div#footer_content_wrap{
